2018-10-25  Florian Weimer  <fweimer@redhat.com>

	[BZ #23562]
	[BZ #23821]
	XFAIL siginfo_t si_band conform test on sparc64.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo-arch.h
	(__SI_BAND_TYPE): Only override long int default type on sparc64.
	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile
	(conformtest-xfail-conds): Add sparc64-linux.
	* conform/data/signal.h-data (siginfo_t): XFAIL si_band test on
	sparc64.
	* conform/data/sys/wait.h-data (siginfo_t): Likewise.

2018-10-19  Ilya Yu. Malakhov  <malakhov@mcst.ru>

	[BZ #23562]
	* sysdeps/unix/sysv/linux/bits/types/siginfo_t.h
	(struct siginfo_t): Use correct type for si_band.

2018-10-17  Stefan Liebler  <stli@linux.ibm.com>

	[BZ #23275]
	* nptl/tst-mutex10.c: New File.
	* nptl/Makefile (tests): Add tst-mutex10.
	(tst-mutex10-ENV): New variable.
	* sysdeps/unix/sysv/linux/s390/force-elision.h: (FORCE_ELISION):
	Ensure that elision path is used if elision is available.
	* sysdeps/unix/sysv/linux/powerpc/force-elision.h (FORCE_ELISION):
	Likewise.
	* sysdeps/unix/sysv/linux/x86/force-elision.h: (FORCE_ELISION):
	Likewise.
	* nptl/pthreadP.h (PTHREAD_MUTEX_TYPE, PTHREAD_MUTEX_TYPE_ELISION)
	(PTHREAD_MUTEX_PSHARED): Use atomic_load_relaxed.
	* nptl/pthread_mutex_consistent.c (pthread_mutex_consistent): Likewise.
	* nptl/pthread_mutex_getprioceiling.c (pthread_mutex_getprioceiling):
	Likewise.
	* nptl/pthread_mutex_lock.c (__pthread_mutex_lock_full)
	(__pthread_mutex_cond_lock_adjust): Likewise.
	* nptl/pthread_mutex_setprioceiling.c (pthread_mutex_setprioceiling):
	Likewise.
	* nptl/pthread_mutex_timedlock.c (__pthread_mutex_timedlock): Likewise.
	* nptl/pthread_mutex_trylock.c (__pthread_mutex_trylock): Likewise.
	* nptl/pthread_mutex_unlock.c (__pthread_mutex_unlock_full): Likewise.
	* sysdeps/nptl/bits/thread-shared-types.h (struct __pthread_mutex_s):
	Add comments.
	* nptl/pthread_mutex_destroy.c (__pthread_mutex_destroy):
	Use atomic_load_relaxed and atomic_store_relaxed.